--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +9,14 @@
         .container {
             width: 100%;
             height: 800px;
-            display: flex;
+            display: block;
             justify-content: center;
         }
+        .row {
+            display: flex;
+        }
         canvas {
+            display: flex;
             border: 1px solid #ccc;
             background-image: url("../static/mapa.png");
             background-size: cover;
@@ -21,81 +25,140 @@
 </head>
 <body>
     <div class="container">
-        <canvas id="canvas" width="1400" height="800"></canvas>
+        <form style="margin: 30px 30px">
+            <label for="cities">Origem:</label>
+            <select id="origin" name="origin">
+                {% for city in cities %}
+                    <option value="{{ city.name }}">{{ city.name }}</option>
+                {% endfor %}
+            </select>
+            <label for="cities">Destino:</label>
+            <select id="destiny" name="destiny">
+                {% for city in cities %}
+                    <option value="{{ city.name }}">{{ city.name }}</option>
+                {% endfor %}
+            </select>
+            <button type="button" id="btnEnviar" onclick="enviarFormulario()">Enviar</button>
+        </form>
+        <div class="row">
+            <canvas id="canvas" width="1400" height="800"></canvas>
+            <div>
+                <ul>
+                    {% for nodeId, node in nodes.items() %}
+                    <li>{{nodeId}}: {{node['name']}}</li>
+                    {% endfor %}
+                </ul>
+                <ul>
+                    {% for path in paths %}
+                    <li>De {{path['from']}} até {{path['to']}}: {{path['distance']}}Km, {{path['time']}}min</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
     <script>
         var canvas = document.getElementById('canvas');
         var ctx = canvas.getContext('2d');
 
+        function drawNode(x, y, texto) {
+            var padding = 10;
+            var cantoArredondado = 7;
+
+            ctx.font = '14px Arial';
+            var larguraTexto = ctx.measureText(texto).width;
+
+            var larguraRetangulo = larguraTexto + 2 * padding;
+            var alturaRetangulo = 30;  // Altura fixa para o exemplo
+
+            ctx.beginPath();
+            ctx.moveTo(x + padding + cantoArredondado, y);
+            ctx.arcTo(x + larguraRetangulo, y, x + larguraRetangulo, y + alturaRetangulo, cantoArredondado);
+            ctx.arcTo(x + larguraRetangulo, y + alturaRetangulo, x, y + alturaRetangulo, cantoArredondado);
+            ctx.arcTo(x, y + alturaRetangulo, x, y, cantoArredondado);
+            ctx.arcTo(x, y, x + larguraRetangulo, y, 1);
+            ctx.shadowOffsetX = 5;
+            ctx.shadowOffsetY = 5;
+            ctx.shadowBlur = 10;
+            ctx.shadowColor = 'rgba(0, 0, 0, 0.5)';
+            ctx.closePath();
+
+            ctx.fillStyle = '#a6a6a6';  // Cor de preenchimento
+            ctx.fill();
+
+            ctx.fillStyle = '#fff';  // Cor do texto
+            ctx.fillText(texto, x + padding, y + alturaRetangulo / 1.6);
+        };
+
+        function drawEdge(x1, y1, x2, y2, text) {
+            ctx.beginPath();
+            ctx.moveTo(x1, y1);
+            ctx.lineTo(x2, y2);
+            ctx.strokeStyle = 'black';
+            ctx.lineWidth = 2;
+            ctx.stroke();
+            // drawNode(((x1+x2)/2),((y1+y2)/2), text)
+        }
+
+        function enviarFormulario() {
+            var oriEle = document.getElementById('origin');
+            var desEle = document.getElementById('destiny');
+
+            // console.log(`Origin: ${oriEle.selectedIndex}\nDestiny: ${desEle.selectedIndex}`);
+
+            var oriVal = oriEle.options[oriEle.selectedIndex].value;
+            var desVal = desEle.options[desEle.selectedIndex].value;
+
+            // console.log(`Valores Selecionados: ${oriVal}, ${desVal}`, );
+        }
+
         document.addEventListener('DOMContentLoaded', function() {
-            function drawNode(x, y, texto) {
-                var padding = 10;
-                var cantoArredondado = 10;
-
-                ctx.font = '14px Arial';
-                var larguraTexto = ctx.measureText(texto).width;
-
-                var larguraRetangulo = larguraTexto + 2 * padding;
-                var alturaRetangulo = 30;  // Altura fixa para o exemplo
-
-                ctx.beginPath();
-                ctx.moveTo(x + padding + cantoArredondado, y);
-                ctx.arcTo(x + larguraRetangulo, y, x + larguraRetangulo, y + alturaRetangulo, cantoArredondado);
-                ctx.arcTo(x + larguraRetangulo, y + alturaRetangulo, x, y + alturaRetangulo, cantoArredondado);
-                ctx.arcTo(x, y + alturaRetangulo, x, y, cantoArredondado);
-                ctx.arcTo(x, y, x + larguraRetangulo, y, 1);
-                ctx.shadowOffsetX = 5;
-                ctx.shadowOffsetY = 5;
-                ctx.shadowBlur = 10;
-                ctx.shadowColor = 'rgba(0, 0, 0, 0.5)';
-                ctx.closePath();
-
-                ctx.fillStyle = '#a6a6a6';  // Cor de preenchimento
-                ctx.fill();
-
-                ctx.fillStyle = '#fff';  // Cor do texto
-                ctx.fillText(texto, x + padding, y + alturaRetangulo / 1.6);
-            };
-
-            function drawEdge(x1, y1, x2, y2, text) {
-                ctx.beginPath();
-                ctx.moveTo(x1, y1);
-                ctx.lineTo(x2, y2);
-                ctx.strokeStyle = 'black';
-                ctx.lineWidth = 2;
-                ctx.stroke();
-                drawNode(((x1+x2)/2),((y1+y2)/2), text)
-            }
-            
             var sNodes = '{{ nodes | tojson }}';
 
             var nodes = JSON.parse(sNodes);
 
-            // var nodes = [];
+            // console.log(`nodes: ${JSON.stringify(nodes)}`)
 
-            var edges = [
-                {from: 1, to: 2, value: 5},
-                {from: 2, to: 3, value: 7}
-            ];
-
-            for (var edge of edges){
-                var fromNode = nodes.find(node => node.id === edge.from);
-                var toNode = nodes.find(function(node) {return node.id === edge.to});
-                console.log(`from: ${JSON.stringify(fromNode)}\nto: ${JSON.stringify(toNode)}`)
-                drawEdge(
-                    fromNode.x,
-                    fromNode.y,
-                    toNode.x,
-                    toNode.y,
-                    edge.value.toString()
-                );
+            for (let i = 1; i <= 15; i++) {
+                node = nodes[i]
+                console.log(`node: ${JSON.stringify(node)}`)
+                for (let path of node.paths) {
+                    var fromNode = nodes[path.from];
+                    // var fromNode = nodes.find(node => node.id === path.from);
+                    var toNode = nodes[path.to];
+                    // var toNode = nodes.find(function(node) {return node.id === edge.to});
+                    // console.log(`fromnode: ${JSON.stringify(fromNode)}`)
+                    // console.log(`tonode: ${JSON.stringify(toNode)}`)
+                    drawEdge(
+                        fromNode.coordinates.x,
+                        fromNode.coordinates.y,
+                        toNode.coordinates.x,
+                        toNode.coordinates.y,
+                        `${path.id}`
+                    );
+                }
             }
 
-            nodes.forEach(function(node) {
-                console.log(`x: ${node.x}, y: ${node.y}`)
-                drawNode(node.x, node.y, `${node.id} -${node.label}`);
-            });
+            for (let i = 1; i <= 15; i++) {
+                node = nodes[i];
+                drawNode(node.coordinates.x,node.coordinates.y, `${node.id}`);
+            }
 
+            // for (var edge of edges){
+            //     var fromNode = nodes.find(node => node.id === edge.from);
+            //     var toNode = nodes.find(function(node) {return node.id === edge.to});
+            //     // console.log(`from: ${JSON.stringify(fromNode)}\nto: ${JSON.stringify(toNode)}`)
+            //     drawEdge(
+            //         fromNode.x,
+            //         fromNode.y,
+            //         toNode.x,
+            //         toNode.y,
+            //         edge.value.toString()
+            //     );
+            // }
+
+            // nodes.forEach(function(node) {
+            //     drawNode(node.x, node.y, `${node.id} - ${node.label}`);
+            // });
         });
     </script>
 </body>
